fixed spacings

--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@ body {
     padding-right: 15%;
 }
 
+.logo {
+    font-weight: 800;
+    font-size: 24px;
+    color: #f9faf8;
+}
+
 button {
     color: white;
     background-color: #3882f6;
@@ -34,6 +40,7 @@ button {
 
 img {
     width: 50%;
+
 }
 
 .header {
@@ -42,10 +49,11 @@ img {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-top: 10px;
 }
 
 .herocontainer {
-    padding-top: 100px;
+    padding: 100px 15%;
     background-color: #1F2937;
     display: flex;
     gap: 20px;
@@ -55,22 +63,23 @@ img {
     color: white;
 }
 
-.title {
+.main {
     font-size: 48px;
     color: #f9faf8;
     font-weight: 900;
 }
 
-.description {
+.secondary {
     padding-top: 8px;
     padding-bottom: 8px;
     font-size: 18px;
-    color: #e5e7eb
+    color: #e5e7eb;
 }
 
 .herotext {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 .content {
@@ -86,28 +95,31 @@ img {
     justify-content: center;
     align-items: center;
     font-size: 11px;
+    height: 60px;
+    flex-shrink: 0;
 }
 
 .content > * {
   flex: 1;
 }
 
-.quote {
+.quotebox {
     background-color: #e5e7eb;
-    color: #1f2937;
+    padding: 100px 250px;
+}
+
+.quote {
     font-size: 36px;
-    font-weight: 300;
-    padding-top: 100px;
-    padding-bottom: 100px;
-    padding-left: 240px;
-    padding-right: 240px;
-    text-align: justify;
+    font-weight: 0;
+    font-style: italic;
+    color: #1f2937;
 }
 
 .author {
-    font-size: 16px;
+    padding-top: 10px;
+    font-size: 20px;
     color: #1f2937;
-    font-weight: 800;
+    font-weight: 900;
     text-align: right;
 }
 
@@ -123,24 +135,27 @@ img {
 .boxes {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 100px;
+    padding: 100px 300px;
+    flex-grow: 0;
 }
 
 .unit {
     display: flex;
     flex-direction: column;
-    width: 150px;
+    width: 120px;
+    align-items: center;
 }
 
 .legend {
     text-align: center;
     color: #1f2937;
     padding-top: 8px;
+    font-size: 12px;
 }
 
 .box {
-  width: 150px;
-  height: 150px;
+  width: 120px;
+  height: 120px;
   border: 4px solid #3882f6;
   border-radius: 12px;
 }
@@ -158,8 +173,31 @@ li {
     padding: 0;
 }
 
-.logo {
-    font-weight: 1000;
-    font-size: 24px;
-    color: #f9faf8;
+.heading {
+    font-size: 20px;
+    color:#f9faf8;
+    font-weight: 800;
 }
+
+.subheading {
+    color:#e5e7eb;
+}
+
+.final {
+    padding: 80px 300px;
+}
+
+.banner {
+    padding: 30px 0px;
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #3882f6;
+    border-radius: 6px;
+    height: 30px;
+    flex-grow: 0;
+}
+
+.banner button{
+    outline: 2px solid white;
+}
+
